[package]
name = "rust-atcoder-daily-solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.3"
itertools = "=0.9.0"
petgraph = "0.6.2"
num = "=0.2.1"
ndarray = "0.15.6"

savacan-lib = { path = "./lib" }
[workspace]
members = ["lib"]