[package]
name = "rust-atcoder-daily-solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.3"
itertools = "0.11.0"
petgraph = "0.6.2"
num = "=0.4.1"
ndarray = "0.15.6"

savacan-lib = { path = "./lib" }
ac-library-rs = "0.1.1"
rand = "0.8.5"
[workspace]
members = ["lib"]
